--- a/templates/index.html
+++ b/templates/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 
-<!-- div class="head">
-    <a href="https://www.logius.nl/" class="logo">
+<div class="head">
+    <!-- a href="https://www.logius.nl/" class="logo">
         <img id="Logius" alt="Logius" src="https://publicatie.centrumvoorstandaarden.nl/respec/style/logos/figure-logius.svg" width="50">
-    </a>
-    <h1>Taxonomy-packages</h1>
-</div -->
+    </a -->
+    <h1>Taxonomy-packages (SBR-NL.nl)</h1>
+</div>
 <div id="GOOD">
     @@@
 </div>
